snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.module.sha256
49065437baad2d4ad4c1f502dbf5ac685d1b63fd24d13f58fa43af1f337a83a7